# augeas-vala

./: AUTHORS  Makefile  Makefile.am  README  augeas-vala.spec  configure.ac  testbuild.sh
src/: augeas.vapi
tests/: Makefile.am  augeas.vala  test-augeas.vala
